2005-02-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (all): Remove debug construct for
	`with-parsed-tramp-file-name'.
	(tramp-smb-prompt): Prompt can contain spaces inside directory
	names.
	(tramp-smb-handle-delete-directory, tramp-smb-handle-delete-file):
	No error message if DIRECTORY or FILENAME doesn't exist.
	(tramp-smb-open-connection): Check existence of
	`tramp-smb-program'.

2005-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation) Use 'dired-call-process
	but 'dired-call-process-command.  Still the same cut'n'waste
	error.
	(tramp-set-auto-save-file-modes) Check for Emacs 21.3.50 removed.

2005-02-09  Kim F. Storm  <storm@cua.dk>

	Change release version from 21.4 to 22.1 throughout.

2005-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (all): Change all addresses to .gnu.org.

2005-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation) Use 'shell-command but
	'shell.  Cut'n'waste error.  Reported by Vincent Bernat
	<bernat@free.fr>.

2005-01-16  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.47 released.

2005-01-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-operation-not-permitted-regexp) New defcustom,
	catching keep-date problems in cp/scp operations.
	(tramp-handle-copy-file): Don't call `set-file-modes'
	unconditionally.  Specialized functions should know better what is
	necessary.  This improves performance a little bit, and the
	functions could catch errors with `cp -p' and `scp -p'.
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-out-of-band): Call `set-file-modes'
	when appropriate.
	(tramp-do-copy-or-rename-file-directly): Mask `cp -p' error.  Call
	`set-file-modes' when appropriate.
	(tramp-action-out-of-band): Mask `scp -p' error.
	Reported by Isak Johnsson <isak@hypergene.com>.

2005-01-09  Michael Albinus  <michael.albinus@gmx.de>
