@@ -25,7 +25,7 @@
 
 @c Emacs values.
 @ifset emacs
-@set emacsname          Emacs
+@set emacsname          GNU Emacs
 @set emacsdir           emacs
 @set ftppackagename     Ange-FTP
 @set prefix             /
@@ -49,7 +49,7 @@
 @set postfix            ]
 @set postfixsinglehop   /
 @set postfixmultihop    :
-@set emacsothername     Emacs
+@set emacsothername     GNU Emacs
 @set emacsotherdir      emacs
 @set emacsotherfilename tramp-emacs.html
 @set japanesemanual     tramp_ja-xemacs.html
