@@ -1,3 +1,11 @@
+2005-02-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* trampver.texi.in: Replace "Emacs" by "GNU Emacs".
+
+	* tramp.texi: Replace "Emacs" by "GNU Emacs".
+	(Default Method): Offer shortened syntax for "su" and "sudo"
+	methods.
+
 2005-02-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi: Replace "Linux" by "GNU/Linux".  Suggested by
